[package]
name = "he-test"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32f303ze to your chip name, if necessary.
embassy-stm32 = { version = "0.2.0", features = [ "defmt", "stm32f303re", "unstable-pac", "memory-x", "time-driver-tim2", "exti"]  }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8.0", default-features = false }
nb = "1.1.0"
embedded-storage = "0.3.1"
static_cell = "2.1.0"

[profile.release]
debug = 2

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "dda17cc7cb85e3818d43561102b1fc6358d059c5" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "dda17cc7cb85e3818d43561102b1fc6358d059c5" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "dda17cc7cb85e3818d43561102b1fc6358d059c5" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "dda17cc7cb85e3818d43561102b1fc6358d059c5" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "dda17cc7cb85e3818d43561102b1fc6358d059c5" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "dda17cc7cb85e3818d43561102b1fc6358d059c5" }